# Kenya-Afrobarometer-Survey-Analysis

kenya_dea_gp/: Makefile  README.md  pyproject.toml
kenya_dea_gp/docs/: mkdocs.yml
kenya_dea_gp/docs/docs/: index.md
kenya_dea_gp/kenya_dea_gp/: __init__.py  dataset.py  features.py  plots.py
kenya_dea_gp/kenya_dea_gp/modeling/: predict.py  train.py
